--- a/src/app/tabs/userprofile/userprofile.page.html
+++ b/src/app/tabs/userprofile/userprofile.page.html
@@ -10,6 +10,6 @@
 </ion-header>
 
 <ion-content>
-  <p>Hello, {{currentUser}}</p>
+  <p>Hello, {{currentUser.email}}</p>
   <ion-button type="submit" (click)="authService.SignOut()" expand="block">Logout</ion-button>
 </ion-content>
