--- a/src/app/tabs/wash/wash.page.html
+++ b/src/app/tabs/wash/wash.page.html
@@ -32,10 +32,10 @@
           <ion-button type="submit" color="success" expand="block">Queue wash</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button type="submit" color="secondary" expand="block" (click)="updateWash(true, false)">Start wash</ion-button>
+          <ion-button type="submit" color="secondary" expand="block" (click)="updateWashStart(true, false)">Start wash</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button type="submit" color="danger" expand="block" (click)="updateWash(true, true)">Abort wash</ion-button>
+          <ion-button type="submit" color="danger" expand="block" (click)="updateWashAbort(true, true)">Abort wash</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
